# poe-dat-rs

./: Cargo.toml  spec.json
examples/: parse-derive.rs  spec-gen.rs
poe-dat-rs/: Cargo.toml
poe-dat-rs/src/: lib.rs
poe-dat-rs/src/parse/: mod.rs  types.rs
poe-dat-wasm/: Cargo.toml
poe-dat-wasm/src/: lib.rs
poe-parser/: Cargo.toml
poe-parser-derive/: Cargo.toml
poe-parser-derive/src/: lib.rs
poe-parser/src/: lib.rs
poe-struct-gen/: Cargo.toml
poe-struct-gen/src/: lib.rs
poe-type-gen/: Cargo.toml
poe-type-gen/src/: lib.rs
src/: main.rs  parse.rs
src/parse/: mod.rs  types.rs
