[package]
name = "poe-dat-converter"
version = "0.1.0"
authors = ["jlmcmchl <jlmcmchl@gmail.com>"]
edition = "2018"
# build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "spec-gen"
path = "examples/spec-gen.rs"

[[example]]
name = "parsable-derive"
path = "examples/parsable-derive.rs"

[dependencies]
glob="0.3.0"
poe-dat-rs = { path = "poe-dat-rs"}