[package]
name = "poe-dat-converter"
version = "0.1.0"
authors = ["jlmcmchl <jlmcmchl@gmail.com>"]
edition = "2018"
# build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "spec-gen"
path = "examples/spec-gen.rs"

[[example]]
name = "parse-derive"
path = "examples/parse-derive.rs"

[dependencies]
glob="0.3.0"
poe-dat-rs = { path = "poe-dat-rs"}
nom = "5.1.2"
heck = "0.3.1"
poe-type-gen = { path = "poe-type-gen" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
poe-parser = { path = "poe-parser" }
rayon = "1.4.1"