[package]
name = "poe-dat-rs"
version = "0.1.0"
authors = ["jlmcmchl <jlmcmchl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom="5.1.2"
lazy_static="1.4.0"
poe-type-gen = { path = "../poe-type-gen" }
poe-parser = { path = "../poe-parser" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"