[package]
name = "poe-dat-wasm"
version = "0.1.0"
authors = ["jlmcmchl <jlmcmchl@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poe-dat-rs= { path = "../poe-dat-rs" }
wasm-bindgen = "0.2.68"