[package]
name = "poe-struct-gen"
version = "0.1.0"
authors = ["jlmcmchl <jlmcmchl@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.42", features = ["extra-traits", "full"] }
quote = "1.0.7"
proc-macro2 = "1.0.23"
proc-macro-hack = "0.5"