[package]
name = "poe-type-gen"
version = "0.1.0"
authors = ["jlmcmchl <jlmcmchl@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3.1"
proc-macro-hack = "0.5"
proc-macro2 = "1.0.23"
quote = "1.0.7"
serde_json = "1.0.57"
syn = { version = "1.0.42", features = ["extra-traits", "full"] }